# jgtpy

./: .coveragerc  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  DATA.md  Dockerfile  ISSUES.md  LICENSE  Makefile  README.md  README.rst  STC.md  WRAP.md  WSL__ids_231228.code-workspace  WSWSL__jgtpy2311.code-workspace  WS__ADS__240314.code-workspace  WS__IDS__2408.code-workspace  WS____2405.code-workspace  WS__ids_231210.code-workspace  WS__ids_2402.code-workspace  WS__jgtpy2311.code-workspace  WS__jgtpy231121.code-workspace  WS__jgtpy2311FXConnectREDIST.code-workspace  _docs_possible_format.txt  _env.sh  _pip-install-pandas-fix.sh  _rel-n-install.sh  _version_sed.sh  ads_plot_test.py  ads_plot_test2.py  adshelper_test.ipynb  batchJGTADSLocal.py  batchJGTCDS.py  batchJGTCDSLocal.py  batchJGTPDS.py  build-by-docker.sh  build-n-release.sh  bump_jgtutils.sh  bump_version.py  (+87 more)
.adam/: adam_agent-state_issue_11.md
.github/workflows/: python-publish.yml  python-publish.yml.disabled
.jgt/: settings.json
.mia/: guillaume_s_notes_on_issue_15.md
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  CDSSvc_purpose.md  CDS_data_columns.md  CDS_purpose.md  IDS_data_columns.md  IDS_purpose.md  README.md  conf.py  genindex.html  index.html  index.rst  indicators.csv  issue15.md  jgtcsv-documenter.py  jgtpy.JGTPDHelper.html  jgtpy.JGTPDS.html  jgtpy.html  jgtpy.jgtetl.html  jgtpy.jgtfxc.html  jgtsnoter.py  jgtsnoterV1.py  objects.inv  pto_read_mail2.py  py-modindex.html  searchindex.js  signals.csv  snote_aggregater.sh  snoterupdate.py  v2jgtsnoter.py  v3jgtsnoter.py
docs/_/: jgtpy.JGTCDS.html  jgtpy.JGTIDS.html  jgtpy.JGTPDS.html  jgtpy.forexconnect.html  jgtpy.html  jgtpy.jgtcli.html  jgtpy.jgtconstants.html  jgtpy.jgtfxcommon.html
docs/_sources/: index.rst.txt
docs/charts/: pto-full.html  pto-pers-AUD-CAD.html  pto-pers-AUD-USD.html  pto-pers-EUR-CAD.html  pto-pers-EUR-USD.html  pto-pers-SPX500.html  pto-pers-USD-CAD.html  pto-pers-USD-JPY.html  pto-pers-XAU-USD.html
jgtpy/: Data.csv  JGTADS.enhancing.md  JGTADS.py  JGTADSRequest.py  JGTBaseRequest.py  JGTCDS.py  JGTCDS.test.py  JGTCDSRequest.py  JGTCDSSvc.py  JGTChartConfig.py  JGTCloudFS.py  JGTConfig.py  JGTCore.py  JGTFXCMWrapper.py  JGTIDS.py  JGTIDSIssues.md  JGTIDSRequest.py  JGTIDSSvc.py  JGTImage.py  JGTLoader.py  JGTMKSG.py  JGTMSG.py  JGTPDHelper.py  JGTPDS.py  JGTPDS.test.ipynb  JGTPDS.test.py  JGTPDSP.py  JGTPDSPSvc.py  JGTPDSRequest.py  JGTTDS.py  JGT_dotenv_sample.txt  NAS100_D1.csv  PDSServicePto2211.cli.py  WSVSSvr__ids.code-workspace  __init__.py  __main__.py  _import_wave1.sh  _make_jgtfxcommon.sh  adsfromcdsfile.py  adshelper.py  (+56 more)
jgtpy/common_samples/: common.py
jgtpy/forexconnect/: EachRowListener.py  ForexConnect.py  LiveHistory.py  ResponseListener.py  SessionStatusListener.py  TableListener.py  TableManagerListener.py  __init__.py  _fix_import.sh  common.py  errors.py  x-pyd.py
samples/: SPX500_D1.pds.full.csv  SPX500_H4.csv
scripts/: _install-pandas-fix.sh  _install-pandas-fix.txt  _version_sed.sh  build-by-docker.sh  crossenv-activate.sh  install-forexconnect-wsl-conda-manually.sh  version-patcher.sh
test/: batch-cli.sh  bk2dev.sh  cds-batch.sh  cli-test.sh  ids-test.py  ipy.sh  monthly-batch.sh  pds-test.py  test_tapy.py
tests/: batch-cli.sh  cds-batch.sh  cli-test.sh
(+13 files in other folders)
