[build-system]
requires = ["setuptools>=40.8.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jgtpy"
version = "0.4.22"
authors = [
  { name="Guillaume Isabelle", email="jgi@jgwill.com" },
]

description = "Enhanced JGTPy CDS, IDS, PDSP Services"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'pandas>=0.25.1',
  'python-dotenv>=0.19.2',
  'jgtapy>=1.9.20',
  'jgtutils>=0.1.45',
  'dropbox>=11.36.2',
	'tlid>=0.1.13',
  'scipy>=1.7.3',
  'matplotlib>=3.3.1',
  'plotly>=5.18.0',
  'mplfinance>=0.12.10b0',
  'panel>=1.2.3',
  'tomli>=1.2.3',
]	
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jgwill/jgtpy"
"Bug Tracker" = "https://github.com/jgwill/jgtpy/issues"


